--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,7 +55,7 @@
     "zod": "^3.24.4"
   },
   "scripts": {
-    "start": "start",
+    "start": "craco start",
     "build": "craco build",
     "test": "craco test"
   },
