--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,7 @@
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.4",
     "globals": "15.15.0",
+    "http-proxy-middleware": "^3.0.5",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
   },
