--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://schedule-confirm-bug.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://dropdown-match.preview.emergentagent.com
 WDS_SOCKET_PORT=443
