--- a/vercel-config/vercel.json
+++ b/vercel-config/vercel.json
@@ -1,7 +1,7 @@
 {
   "build": {
     "env": {
-      "REACT_APP_BACKEND_URL": "https://calendar-debug.preview.emergentagent.com"
+      "REACT_APP_BACKEND_URL": "https://quality-scout-1.preview.emergentagent.com"
     }
   },
   "headers": [
